# tempfiles-rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: audit.yaml  cargo.yaml
conf/: config.toml
data/: config.toml
data/static/: styles.css
data/templates/: about.html  base.html  error.html  index.html  login.html  preview.html  register.html  settings.html
data/templates/components/: preview.html
data/templates/js/: settings.js  upload_file.js
migrations/: Cargo.toml
migrations/src/: lib.rs  m20220101_000001_create_table.rs  m20250507_105126_file_tracking.rs  m20250528_144714_user_apitok.rs
scripts/: gen_schemas.sh  migration_cmd.sh
src/: api_v1.rs  auth.rs  config.rs  errors.rs  files.rs  garbage_collector.rs  main.rs  state.rs  urls.rs  user.rs  views.rs
src/db/: types.rs
src/db/schema/: file.rs  mod.rs  prelude.rs  user.rs  user_token.rs
