[package]
name = "tempfiles-rs"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "AGPL-3.0-or-later"
description = "No description yet"
readme = "README.md"
homepage = "https://github.com/PlexSheep/tempfiles-rs"
repository = "https://github.com/PlexSheep/tempfiles-rs"


[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4", features = ["rustls"] }
env_logger = "0.11.8"
log = "0.4"
mime = "0.3.17"
rand = "0.9.1"
rustls = "0.23"
sea-orm = { version = "1.1.10", features = [
	"runtime-tokio-rustls",
	"sqlx-sqlite",
	"macros",
] }
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["tracing", "macros"] }
toml = "0.8.20"
migration = { path = "./migrations/" }
argon2 = "0.5.3"

[workspace]
members = ["./migrations/", "."]
