[package]
name = "tempfiles-rs"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "AGPL-3.0-or-later"
description = "No description yet"
readme = "README.md"
homepage = "https://github.com/PlexSheep/tempfiles-rs"
repository = "https://github.com/PlexSheep/tempfiles-rs"


[dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["rt", "macros", "tracing", "full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
