[package]
name = "tempfiles-rs"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["Christoph J. Scherr <software@cscherr.de>"]
license = "AGPL-3.0-or-later"
description = "No description yet"
readme = "README.md"
homepage = "https://github.com/PlexSheep/tempfiles-rs"
repository = "https://github.com/PlexSheep/tempfiles-rs"


[dependencies]
actix-multipart = "0.7.2"
actix-web = { version = "4", features = ["rustls"] }
env_logger = "0.11.8"
log = "0.4"
mime = "0.3.17"
rand = "0.9.1"
rustls = "0.23"
sea-orm = { version = "1.1.10", features = [
	"runtime-tokio-rustls",
	"sqlx-sqlite",
	"macros",
] }
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["tracing", "macros"] }
toml = "0.8.22"
migrations = { path = "./migrations/" }
argon2 = "0.5.3"
sea-orm-migration = { version = "1.1.10", features = [
	"runtime-tokio-rustls",
	"sqlx-sqlite",
] }
actix-files = "0.6.6"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
minijinja = { version = "2.9.0", features = ["loader"] }
urlencoding = "2.1.3"
human_bytes = { version = "0.4.3", features = ["fast"] }
magic = "0.16.2"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
actix-web-static-files = "4.0.1"
static-files = "0.2.4"
validator = { version = "0.20.0", features = ["derive"] }
actix-identity = "0.8.0"
derive_builder = "0.20.2"
serde_repr = "0.1.20"
futures-util = "0.3.31"
minijinja-autoreload = { version = "2.10.2", optional = true }

[build-dependencies]
static-files = "0.2.4"

[workspace]
members = ["./migrations/", "."]

[features]
default = ["autoreload"]
autoreload = ["dep:minijinja-autoreload"]
devel-quickcycle = ["autoreload"]
